syntax = "proto3";

package flowstate.v1;

import "flowstate/v1/state.proto";
import "flowstate/v1/commands.proto";

message ErrorRevMismatch {
  repeated string committable_state_ids = 2;
}

message DoCommandRequest {
  repeated StateContext state_contexts = 1;
  repeated Data data = 2;
  repeated AnyCommand commands = 3;
}

message DoCommandResponse {
  repeated StateContext state_contexts = 1;
  repeated Data data = 2;
  repeated AnyResult results = 3;
}

message RegisterFlowRequest {
  string flow_id = 1;
  string http_host = 2;
}

message RegisterFlowResponse {
}

message WatchStatesRequest {
  option deprecated = true;

  message Labels {
    map<string, string> labels = 3;
  }

  int64 since_rev = 1;
  bool since_latest = 2;
  int64 since_time_usec = 3;
  repeated Labels labels = 4;
}

message WatchStatesResponse {
  option deprecated = true;

  State state = 1;
  bool ping = 2;
}

service ServerService {
  rpc DoCommand(DoCommandRequest) returns (DoCommandResponse) {}
  rpc WatchStates(WatchStatesRequest) returns (stream WatchStatesResponse) {
    option deprecated = true;
  }
  rpc RegisterFlow(RegisterFlowRequest) returns (RegisterFlowResponse) {}
}